Create stable service (#7)
* removing authorization middleware as its not needed on every route

* removed basic routes

* added oidc redirection uri

* added badger and randstr

* adding badger db for keeping states and verifiers synced

* added login route which creates a state and verifier and redirects users to the designated endpoint

* added local callback route to handle authentication requests while developing without a frontend

* updating readme

* [wip] refresh token configuration and storage

* adding certificate generation and locking via redis

* added extra variable to keep track of external issuer

* adding private and public keys to resources

the variables have beem put there as the file they are being read from
is a resource

* switchting state management to redis

* adding route for retrieving the JWK

* adding route to get the configuration information from for web clients

* adding new well-known routes

* adding query to get users by an internal id

* changed curve to P-256 and reenabled redis unlock

* adding required fields to private and public key

* dropping unused indirect dependency

* made the get user util generic

* dropped configuration route

* changed serializer sign method to retrieve key alg from JWK

* created route for getting single user information

* started documentation of API

* adding user management route to protected user managment group

* reformatted sql query

* updating workflows

* adding route for listing all users

* renaming structs to types

* moving user management routes into own folder

* added additional encryption certificate

* made get user utility type generic

* created identifier types

* replaced administrator status with correct values

* created signing and encryption key variables

* directly returning the set created during setup

* updating parameters for user information route

* added "refresh_token" grant

* ad
